# ipycanvas_drawing

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: example_drawing.ipynb
examples/.ipynb_checkpoints/: example_drawing-checkpoint.ipynb
src/ipycanvas_drawing/: __init__.py  drawing_widget.py
src/ipycanvas_drawing.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
